signup and other crud routes
